reworked code for better maintaining, added model/product detection, re-adding of devices required

--- a/custom_components/ckw_hass_gs108e/translations/de.json
+++ b/custom_components/ckw_hass_gs108e/translations/de.json
@@ -6,6 +6,7 @@
         "error": {
             "config": "Verbindungs- oder Anmeldefehler: Bitte \u00fcberpr\u00fcfe deine Konfiguration"
         },
+        "timeout": "Zeitüberschreitung bei der Verbindung zum Switch",
         "step": {
             "user": {
                 "data": {
